# typediff

./: CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: commit-lint.yml  main.yml  release.yml  security-audit.yml
crates/bio_diff/: Cargo.toml
crates/bio_diff/src/: lib.rs  needlemanwunsch.rs
crates/differ/: Cargo.toml  README.md
crates/differ/src/: apply_diff.rs  diff.rs  diff_score.rs  hamming.rs  levenshtein.rs  lib.rs
crates/semantic_typediff/: Cargo.toml  README.md
crates/typediff/: Cargo.toml  README.md
crates/typediff/src/: apply_diff.rs
src/: apply_diff.rs  hamming.rs  levenshtein.rs  lib.rs
